--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools >= 68.0.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "fandango-lern"
+name = "fandangoLearner"
 version = "0.0.1"
 authors = [
     { name = "Martin Eberlein", email = "martin.eberlein@hu-berlin.de" },
