--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ classifiers = [
 dependencies = [
     "fandango-fuzzer @ git+https://github.com/fandango-fuzzer/fandango.git@learner",
     "debugging-benchmark @ git+https://github.com/martineberlein/debugging-benchmark.git",
+    "pandas>=2.2.3",
 ]
 
 [project.optional-dependencies]
