--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,11 @@ dependencies = [
     "fandango-fuzzer @ git+https://github.com/fandango-fuzzer/fandango.git@learner",
     "debugging-benchmark @ git+https://github.com/martineberlein/debugging-benchmark.git",
     "pandas>=2.2.3",
+    "shap>=0.45",
+    "lightgbm>=4.3.0",
+    "pandas>=2.1.0",
+    "numpy>=1.23.2",
+    "scikit-learn>=1.1.2",
 ]
 
 [project.optional-dependencies]
