--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -47,13 +47,18 @@ jobs:
           sudo apt-get update && sudo apt-get install -y python3-dev graphviz libgraphviz-dev pkg-config
           pip install pygraphviz
 
-      # Step 5: Install Python dependencies using make and run tests
-      - name: Install dependencies with Makefile and run tests
+      # Step 5: Install Python dependencies using make
+      - name: Install dependencies with Makefile
         run: |
           python -m pip install --upgrade pip  # Upgrade pip to the latest version
-          make test # Run tests using the Makefile
+          make install-test  # Install dependencies using the Makefile
 
-      # Step 6: Cache installed packages for system dependencies
+      # Step 6: Run tests using pytest
+      - name: Run tests with pytest
+        run: |
+          make tests  # Run the tests
+
+      # Step 7: Cache installed packages for system dependencies
       - name: Cache pygraphviz dependencies
         uses: actions/cache@v3
         with:
