--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,1 @@
-git+https://github.com/fandango-fuzzer/fandango.git@learner
+fandango-fuzzer @ git+https://github.com/fandango-fuzzer/fandango.git@learner
