refine: comment out branch triggers in python-tests.yml

--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -6,11 +6,11 @@ name: Tests
 on:
   push:
     branches:
-      - dev   # Run tests on pushes to the dev branch
-      - main  # Run tests on pushes to the main branch
+      #- dev   # Run tests on pushes to the dev branch
+      #- main  # Run tests on pushes to the main branch
   pull_request:
     branches:
-      - main  # Run tests on pull requests targeting the main branch
+      #- main  # Run tests on pull requests targeting the main branch
   workflow_dispatch: # Enables manual execution from the Actions tab
 
 jobs:
