--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ dependencies = [
     "lightgbm>=4.3.0",
     "numpy>=1.23.2",
     "scikit-learn>=1.1.2",
+    "fandango-fuzzer>=0.8.0"
 ]
 
 [project.optional-dependencies]
