--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,6 @@
-fandango-fuzzer @ git+https://github.com/fandango-fuzzer/fandango.git@learner
+numpy~=2.1.3
+pandas~=2.2.3
+lightgbm~=4.5.0
+scikit-learn~=1.6.1
+shap~=0.46.0
+fandango-fuzzer~=0.8.0
